--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ check:
   only:
     - branches
   script:
-    - apk add --no-cache openssh-client bash curl
+    - apk add --no-cache openssh-client bash curl coreutils
     - git config --global user.email $GIT_USER_EMAIL && git config --global user.name $GIT_USER_NAME
     - mkdir -p ~/.ssh && echo "$GITLAB_SSH_PRIV_KEY" > ~/.ssh/id_rsa && ssh-keyscan -H git.yrzr.ocry.com > ~/.ssh/known_hosts && chmod -R 0600 ~/.ssh/
     - git fetch --tags && ./check-version.sh && ./create-tags.sh
@@ -25,7 +25,7 @@ check:
   script:
     # setup dockerd
     - /usr/local/bin/dockerd-entrypoint.sh &
-    - apk add --no-cache bash git
+    - apk add --no-cache bash coreutils
     - docker info || sleep 5 && docker info
     # fetch dockerfile
     - git clone -b ${CI_COMMIT_TAG} --depth=1 https://github.com/ipfs/go-ipfs.git
@@ -41,7 +41,7 @@ check:
 
 build-armv7:
   <<: *build_stage
-  image: yrzr/docker-arm32v7:stable-dind
+  image: yrzr/docker-arm32v7:stable-dind-git
   tags:
     - armhf
     - docker
@@ -52,7 +52,7 @@ build-armv7:
 
 # build-armv8:
 #   <<: *build_stage
-#   image: arm64v8/docker:stable-dind
+#   image: arm64v8/docker:stable-dind-git
 #   tags:
 #     - aarch64
 #     - docker
