--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+variables:
+  BASENAME: go-ipfs
+
 stages:
   - check
   - build
@@ -31,13 +34,13 @@ check:
     - git clone -b ${CI_COMMIT_TAG} --depth=1 https://github.com/ipfs/go-ipfs.git
     - cd ./go-ipfs
     # build
-    - sed -i "s/golang\:/${BASE_NS}\/golang\:/" ./Dockerfile && sed -i "s/busybox\:/${BASE_NS}\/busybox\:/" ./Dockerfile && sed -i 's/x86_64-linux-gnu/arm-linux-gnueabihf/' ./Dockerfile && sed -i "s/VERSION\/tini/VERSION\/tini-${ARCH_NAME}/" ./Dockerfile
-    - docker build -q -t ${DOCKER_NS}/${BASENAME}:${CI_COMMIT_TAG} -f ./Dockerfile ./
+    - sed -i "s/golang\:/${ARMVER}\/golang\:/" ./Dockerfile && sed -i "s/busybox\:/${ARMVER}\/busybox\:/" ./Dockerfile && sed -i 's/x86_64-linux-gnu/arm-linux-gnueabihf/' ./Dockerfile && sed -i "s/VERSION\/tini/VERSION\/tini-${ARCH_NAME}/" ./Dockerfile
+    - docker build -t ${DOCKER_NS}/${BASENAME}-${ARMVER}:${CI_COMMIT_TAG} -f ./Dockerfile ./
     # latest tag
     - cd ../ && git fetch --tags && ./latest-tag.sh
     # docker push
     - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD 
-    - docker images && docker push ${DOCKER_NS}/${BASENAME}
+    - docker images && docker push ${DOCKER_NS}/${BASENAME}-${ARMVER}
 
 build-armv7:
   <<: *build_stage
@@ -47,19 +50,17 @@ build-armv7:
     - docker
   variables:
     ARCH_NAME: armhf
-    BASE_NS: arm32v7
-    BASENAME: go-ipfs-arm32v7
+    ARMVER: arm32v7
 
-# build-armv8:
-#   <<: *build_stage
-#   image: arm64v8/docker:stable-dind-git
-#   tags:
-#     - aarch64
-#     - docker
-#   variables:
-#     ARCH_NAME: arm64
-#     BASE_NS: arm64v8
-#     BASENAME: go-ipfs-arm64v8
+build-armv8:
+  <<: *build_stage
+  image: arm64v8/docker:stable-dind-git
+  tags:
+    - aarch64
+    - docker
+  variables:
+    ARCH_NAME: arm64
+    ARMVER: arm64v8
 
 mirror:
   image: yrzr/docker-arm32v7:stable-git
