--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ check:
   script:
     # setup dockerd
     - /usr/local/bin/dockerd-entrypoint.sh &
-    - apk add --no-cache bash coreutils git
+    - apk add --no-cache bash coreutils
     - docker info || sleep 5 && docker info
     # fetch dockerfile
     - git clone -b ${CI_COMMIT_TAG} --depth=1 https://github.com/ipfs/go-ipfs.git
@@ -44,7 +44,7 @@ check:
 
 build-armv7:
   <<: *build_stage
-  image: yrzr/docker-arm32v7:stable-dind
+  image: yrzr/docker-arm32v7:stable-dind-git
   tags:
     - armhf
     - docker
@@ -54,7 +54,7 @@ build-armv7:
 
 build-armv8:
   <<: *build_stage
-  image: arm64v8/docker:stable-dind
+  image: arm64v8/docker:stable-dind-git
   tags:
     - aarch64
     - docker
