Fix missing base name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+variables:
+  BASENAME: go-ipfs
+
 stages:
   - check
   - build
@@ -38,7 +41,7 @@ check:
     - cd ../ && git fetch --tags && ./latest-tag.sh
     # docker push
     - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD 
-    - docker images && docker push ${DOCKER_NS}/${BASENAME}
+    - docker images && docker push ${DOCKER_NS}/${BASENAME}-${ARMVER}
 
 build-armv7:
   <<: *build_stage
