--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
   - mirror
 
 check:
-  image: yrzr/docker-arm32v7:stable-git
+  image: arm32v7/docker:stable-git
   stage: check
   tags:
     - armhf
@@ -27,9 +27,8 @@ check:
     - tags
   script:
     # setup dockerd
-    - /usr/local/bin/dockerd-entrypoint.sh &
-    - apk add --no-cache bash coreutils git
-    - docker info || sleep 5 && docker info
+    - docker info
+    - apk add --no-cache bash coreutils
     # fetch dockerfile
     - git clone -b ${CI_COMMIT_TAG} --depth=1 https://github.com/ipfs/go-ipfs.git
     - cd ./go-ipfs
@@ -44,7 +43,10 @@ check:
 
 build-armv7:
   <<: *build_stage
-  image: yrzr/docker-arm32v7:stable-dind-git
+  image: arm32v7/docker:stable-git
+  services:
+    - name: arm32v7/docker:stable-dind
+      alias: docker
   tags:
     - armhf
     - docker
@@ -56,6 +58,9 @@ build-armv7:
 build-armv8:
   <<: *build_stage
   image: arm64v8/docker:stable-dind
+  services:
+    - name: arm64v8/docker:stable-dind
+      alias: docker
   tags:
     - aarch64
     - docker
@@ -65,7 +70,7 @@ build-armv8:
     ARMVER: arm64v8
 
 mirror:
-  image: yrzr/docker-arm32v7:stable-git
+  image: arm32v7/docker:stable-git
   stage: mirror
   only:
     - master
@@ -78,4 +83,5 @@ mirror:
     - chmod -R 0600 ~/.ssh/
     - git remote | grep github || git remote add github git@github.com:yrzr/go-ipfs-armhf.git
     - git fetch github
-    - git push github "$CI_BUILD_REF_NAME" -f
+    - git checkout -t -b master origin/master
+    - git push github
