--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ check:
   only:
     - branches
   script:
-    - apk add --no-cache openssh-client bash curl coreutils
+    - apk add --no-cache --upgrade openssh-client bash curl coreutils
     - git config --global user.email $GIT_USER_EMAIL && git config --global user.name $GIT_USER_NAME
     - mkdir -p ~/.ssh && echo "$GITLAB_SSH_PRIV_KEY" > ~/.ssh/id_rsa && ssh-keyscan -H git.yrzr.ocry.com > ~/.ssh/known_hosts && chmod -R 0600 ~/.ssh/
     - git fetch --tags && ./check-version.sh && ./create-tags.sh
